[package]
name = "testcontainers-ext"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
bollard = { version = ">=0.18" }
futures = { version = ">=0.3" }
log = { version = ">=0.4" }
testcontainers = { version = ">=0.23.3" }
testcontainers-modules = { version = ">=0.11.4" }
tracing = { version = ">=0.1", optional = true }

[dev-dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["rt", "macros"] }
